--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
   <html lang="en">
     <head>
       <title>JSX</title>
+
       <link rel="stylesheet" href="/styles.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"/>
+    
     </head>
     
     <body>
